# floem

examples/animations/src/: main.rs
examples/counter/: Cargo.toml
examples/counter/src/: bla.rs  main.rs
examples/movies-app/: Cargo.toml
examples/movies-app/assets/data/: now_playing_movies.json  orig_popular_movies.json  popular_movies.json  top_rated_movies.json  watchlist.json
examples/movies-app/assets/data/ai/: movie_details_template.json
examples/movies-app/assets/data/movie_details/: 848326.json
examples/movies-app/assets/data/movie_detals/: 848326.json
examples/movies-app/assets/data/person_details/: 117642.json
examples/movies-app/assets/data/tv_shows/: currently_airing.json  popular.json  top_rated.json
examples/movies-app/src/: data_provider.rs  linear_grad_backdrop.rs  main.rs  models.rs  spinner.rs  suspense.rs
examples/movies-app/src/screens/: add_media.rs  home.rs  mod.rs  movie_details.rs  movies.rs  person_details.rs  tv_shows.rs  watchlist.rs
examples/resize-window/: Cargo.toml
examples/table/: Cargo.toml
examples/table/src/: main.rs
examples/testing/: Cargo.toml
reactive/src/: lib.rs  resource.rs  signal.rs
src/: action.rs  app.rs  app_handle.rs  context.rs  event.rs  ext_event.rs  id.rs  lib.rs  renderer.rs  update.rs  view.rs  window.rs  window_handle.rs
src/animate/: anim_id.rs  anim_state.rs  anim_transform.rs  anim_val.rs  animation.rs  easing.rs  mod.rs  prop.rs
src/views/: decorator.rs  img.rs  label.rs  mod.rs  table.rs  tbl.rs  td.rs  text_input.rs  th.rs
src/widgets/: text_input.rs
vger/src/: lib.rs
(+5 files in other folders)
