[package]
name = "movies-app"
version = "0.1.0"
edition = "2021"

[dependencies]
im = {version = "15.1.0", features = ["serde"]}
floem = { path = "../.." }
serde = "1.0.193"
serde_json = "1.0.108"
reqwest = {version = "0.11.23", features = ["blocking"]}
futures = "0.3.29"
crossbeam-channel = "0.5.10"
anyhow = "1.0.77"
num-format = "0.4.4"

# A profile which compiles all (non-workspace) dependencies in release mode
# but Lapce code in dev mode. This gives a good debugging experience for your
# code and fast performance of other people's code. After the initial
# build subsequent ones are as fast as dev mode builds.
# See https://doc.rust-lang.org/cargo/reference/profiles.html
# To use this profile:
#   cargo build --profile fastdev
#   cargo run --profile fastdev --bin movies-app
[profile.dev.package."*"]
opt-level = 3
